--- a/main.css
+++ b/main.css
@@ -20,10 +20,31 @@ header{
 .lista-cadastro input[type="text"]{
     width: 100%;
     height: 40px;
-    padding-left: 20px;
+    padding-left: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
+}
+
+.lista-cadastro input[type="submit"]{
+    width: 100%;
+    height: 40px;
+    margin-left: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+
+.lista-cadastro input[type="number"]{
+    width: 100%;
+    height: 40px;
+    padding-left: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    margin-left:20px; ;
 }
 
 .lista-produto h2{
@@ -64,3 +85,21 @@ h3.product-price span{
     font-weight: bold;
 }
 
+.limpar-carrinho{
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+    padding: 0 20px;
+}
+
+
+.limpar-carrinho button{
+    width: 100%;
+    height: 40px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: #1b93d4;
+    color: white;
+}
